Changes in json file

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "Orbay Chakar",
             "email": "orbay.chakar@hotmail.com",
-            # "homepage": "http://seld.be",
+            "homepage": "https://github.com/whitebluewalker/bts",
             "role": "Developer"
         }
     "license": [
