--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "homepage": "https://github.com/whitebluewalker/bts",
             "role": "Developer"
         }
-    "require": { "magento/framework": "100.0.*" },
+    "require": { "magento/framework": "100.0.*", },
     "type": "magento2-language",
     "autoload": {
         "files": [
