Revert "Changes in json file"
This reverts commit ac15f5b6ffbdd58fb9fd20bca8b9d091ac077c30.

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "Orbay Chakar",
             "email": "orbay.chakar@hotmail.com",
-            "homepage": "https://github.com/whitebluewalker/bts",
+            # "homepage": "http://seld.be",
             "role": "Developer"
         }
     "type": "magento2-language",
