--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,18 @@
     "description": "Bulgarian language package for Magento 2.100",
     "version": "100.0.0",
 	 "homepage": "https://github.com/Seldaek/monolog",
-    "license": "MIT",
     "authors": [
         {
             "name": "Orbay Chakar",
             "email": "orbay.chakar@hotmail.com",
-            # "homepage": "http://seld.be",
+            "homepage": "https://github.com/whitebluewalker/bts",
             "role": "Developer"
         }
+	],
+	"license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "type": "magento2-language",
     "autoload": {
         "files": [
