modified:   composer.json

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Bulgarian language package for Magento 2.100",
     "version": "100.0.0",
 	 "homepage": "https://github.com/Seldaek/monolog",
+	 "_token": "GGZ-SU_lC6A6kKBDSjxD",
     "authors": [
         {
             "name": "Orbay Chakar",
